<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loveandhelp</string>
    <string name="action_settings">Settings</string>

    ＃News
    <string name="news_title">News</string>
    <string name="news_favorite_actionbar">Favorite</string>
    <string name="subtitle">News</string>
    <string name="icon">image</string>

    # User
    <string name="user_login_title">Login</string>
    <string name="user_email_text">Please enter your email</string>
    <string name="user_name_text">Please enter your user name</string>
    <string name="user_password_text">Please enter your password. (At least 8 characters)</string>
    <string name="user_email_hint">Email</string>
    <string name="user_name_hint">Name</string>
    <string name="user_password_hint">Password</string>
    <string name="user_signup">Sign Up</string>
    <string name="user_account">Account</string>
    <string name="user_token">token</string>
    <string name="account_logout_text">Log Out</string>

    # Main
    <string name="main_navi_news">Latest News</string>
    <string name="main_navi_patient">Add Patients</string>
    <string name="main_navi_medicine">Find Medicine</string>

    # Patient
    <string name="patient_title">Patients</string>
    <string name="patient_new">Add Patient</string>

    <string name="patient_name_text">Name</string>
    <string name="patient_name_hint">James</string>
    <string name="patient_age_text">Age</string>
    <string name="patient_age_hint">70</string>
    <string name="patient_name_empty">Name cannot be empty</string>
    <string name="patient_age_empty">Age cannot be empty</string>
    <string name="patient_add_new_medicine">Add new medicine</string>

    # Colors
    <color name="light_red">#FF3366</color>
    <string name="title_activity_home">Home</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>



</resources>
