<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email_hint"
        android:ems="10"
        android:id="@+id/user_email_editview"
        android:padding="20dp"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user_name_hint"
        android:ems="10"
        android:id="@+id/user_name_editview"
        android:padding="20dp"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/user_password_hint"
        android:ems="10"
        android:id="@+id/user_password_editveiw"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_signup"
        android:id="@+id/user_signup_button"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>