<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.xinghan.android.loveandhelp.HomeActivity$PlaceholderFragment">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_navi_news"
        android:id="@+id/main_navi_news"
        android:layout_gravity="center_horizontal"
        android:background="@null"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_navi_patient"
        android:id="@+id/main_navi_patient"
        android:layout_gravity="center_horizontal"
        android:background="@null"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_navi_medicine"
        android:id="@+id/main_navi_medicine"
        android:layout_gravity="center_horizontal"
        android:background="@null"/>
</LinearLayout>
</RelativeLayout>
